// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bucket is public 1`] = `
"{
  \\"data\\": {
    \\"google_client_config\\": {
      \\"root_config_E62FD7A7\\": {}
    }
  },
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket_E5DAA363\\": {
        \\"location\\": \\"\${data.google_client_config.root_config_E62FD7A7.region}\\",
        \\"name\\": \\"c8045fccc85a7ef42d5391d87958e5ce36c53a401a\\",
        \\"public_access_prevention\\": \\"enforced\\"
      }
    },
    \\"google_storage_bucket_iam_member\\": {
      \\"root_mybucket_PublicAccessIamMember_53C8A9DA\\": {
        \\"bucket\\": \\"\${google_storage_bucket.root_mybucket_E5DAA363.name}\\",
        \\"member\\": \\"allUsers\\",
        \\"role\\": \\"roles/storage.objectViewer\\"
      }
    }
  }
}"
`;

exports[`bucket is public 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "config": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.dataGoogleClientConfig.DataGoogleClientConfig",
                  "version": "5.0.2",
                },
                "id": "config",
                "path": "root/Default/config",
              },
              "google": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.2",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "PublicAccessIamMember": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucketIamMember.StorageBucketIamMember",
                      "version": "5.0.2",
                    },
                    "id": "PublicAccessIamMember",
                    "path": "root/Default/my_bucket/PublicAccessIamMember",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
"{
  \\"data\\": {
    \\"google_client_config\\": {
      \\"root_config_E62FD7A7\\": {}
    }
  },
  \\"resource\\": {
    \\"google_storage_bucket\\": {
      \\"root_mybucket_E5DAA363\\": {
        \\"location\\": \\"\${data.google_client_config.root_config_E62FD7A7.region}\\",
        \\"name\\": \\"c8045fccc85a7ef42d5391d87958e5ce36c53a401a\\"
      }
    }
  }
}"
`;

exports[`create a bucket 2`] = `
Object {
  "tree": Object {
    "children": Object {
      "root": Object {
        "children": Object {
          "Default": Object {
            "children": Object {
              "WingLogger": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud logging facility",
                  "hidden": true,
                  "title": "Logger",
                },
                "id": "WingLogger",
                "path": "root/Default/WingLogger",
              },
              "config": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.dataGoogleClientConfig.DataGoogleClientConfig",
                  "version": "5.0.2",
                },
                "id": "config",
                "path": "root/Default/config",
              },
              "google": Object {
                "constructInfo": Object {
                  "fqn": "@cdktf/provider-google.provider.GoogleProvider",
                  "version": "5.0.2",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": Object {
                "attributes": Object {
                  "wing:resource:connections": Array [],
                  "wing:resource:stateful": true,
                },
                "children": Object {
                  "Default": Object {
                    "constructInfo": Object {
                      "fqn": "@cdktf/provider-google.storageBucket.StorageBucket",
                      "version": "5.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                },
                "constructInfo": Object {
                  "fqn": "constructs.Construct",
                  "version": "10.1.228",
                },
                "display": Object {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
            },
            "constructInfo": Object {
              "fqn": "constructs.Construct",
              "version": "10.1.228",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": Object {
            "constructInfo": Object {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.1",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": Object {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.1",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": Object {
      "fqn": "cdktf.App",
      "version": "0.15.1",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
